2006-02-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Implemented.

	* cupsppd.c (Group_getOptions): Return a list, not a dict, to
	preserve the order of options.
	* test.py (test_cups_module): Updated.

	* cupsconnection.c (Connection_addPrinter): Allow adding a printer
	from a ppd-name instead of a filename.

	* cupsconnection.c (Connection_getFile): Fixed ipp_t leak.

	* cupsppd.c (PPD_getOptionGroups): Make this an attribute not a
	method.
	* test.py (test_cups_module): Updated.

	* cupsppd.c: Implement 'Constraint' type.
	* cupsppd.h: Declare cups_ConstraintType.
	* cupsmodule.c (initcups): Add 'Constraint' type.

	* cupsconnection.c (Connection_getPrinters): Do this inline
	instead of in a separate function.
