@@ -1,3 +1,7 @@
+2006-02-22  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getDevices): Implemented.
+
 2006-02-21  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPPDs): Implemented.
